--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "express": "^4.18.2",
     "grammy": "^1.17.2",
     "mongoose": "^7.4.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0",
     "tsc-watch": "^6.0.4"
   },
   "devDependencies": {
